# strawpot_memory

./: README.md  pyproject.toml
.github/workflows/: publish.yml
strawpot_memory/: memory_protocol.py
tests/: test_memory_protocol.py
