[project]
name = "strawpot-memory"
dynamic = ["version"]
description = "Memory protocol types for StrawPot agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "StrawPot Contributors"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
